update gen_cpp to align with our firmware. update scripts for diff img size capability.

--- a/UIRun.ipynb
+++ b/UIRun.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "id": "50c65525-ff24-44ce-933b-324006bc2f6c",
    "metadata": {
     "jupyter": {
@@ -190,7 +190,7 @@
     "    \n",
     "    def show_main(self):   \n",
     "        \n",
-    "        intro_text = 'Please Choose the setting of data prepare & train'\n",
+    "        intro_text = 'Yolox-nano-nu Easy Setting'\n",
     "        htmlWidget = widgets.HTML(value = f\"<b><font color='lightgreen'><font size=6>{intro_text}</b>\")\n",
     "        display(htmlWidget)\n",
     "        \n",
@@ -338,7 +338,15 @@
     "                elif line.startswith(search_phrase[1]):\n",
     "                    file.write(f\"{new_value[1]}\\n\")\n",
     "                elif line.startswith(search_phrase[2]):\n",
-    "                    file.write(f\"{new_value[2]}\\n\")    \n",
+    "                    file.write(f\"{new_value[2]}\\n\")\n",
+    "                elif line.startswith(search_phrase[3]):\n",
+    "                    file.write(f\"{new_value[3]}\\n\")\n",
+    "                elif line.startswith(search_phrase[4]):\n",
+    "                    file.write(f\"{new_value[4]}\\n\")\n",
+    "                elif line.startswith(search_phrase[5]):\n",
+    "                    file.write(f\"{new_value[5]}\\n\")    \n",
+    "                elif line.startswith(search_phrase[6]):\n",
+    "                    file.write(f\"{new_value[6]}\\n\")    \n",
     "                else:\n",
     "                    file.write(line)\n",
     "        \n",
@@ -347,8 +355,10 @@
     "        print(\"Update the variables of yolox_convert.bat done!\")\n",
     "        \n",
     "        file_path = \"yolox_convert.bat\"\n",
-    "        search_phrase = [\"set MODEL_FILE_NAME\", \"set OUTPUT_DIR\", \"set TRAIN_DATASET\"]\n",
-    "        new_value = [f\"set MODEL_FILE_NAME={self.C_cm.value}\", f\"set OUTPUT_DIR={self.A_cm.value}\", f\"set TRAIN_DATASET={self.B_cm.value}\"]\n",
+    "        search_phrase = [\"set IMG_SIZE\", \"set NUM_CLS\", \"set MODEL_FILE_NAME\", \"set OUTPUT_DIR\", \"set TRAIN_DATASET\", \"set IMAGE_SIZE_EXPR\", \"set CLASS_EXPR\"]\n",
+    "        IMAGE_SIZE_update = f\"set IMAGE_SIZE_EXPR=\\\"extern const int originalImageSize = {self.E_ta.value}\\\"\"\n",
+    "        CLASS_EXPR_update = f\"set CLASS_EXPR=\\\"extern const int numClasses = {self.D_ta.value}\\\"\"\n",
+    "        new_value = [f\"set IMG_SIZE={self.E_ta.value}\", f\"set NUM_CLS={self.D_ta.value}\", f\"set MODEL_FILE_NAME={self.C_cm.value}\", f\"set OUTPUT_DIR={self.A_cm.value}\", f\"set TRAIN_DATASET={self.B_cm.value}\", IMAGE_SIZE_update, CLASS_EXPR_update]\n",
     "        self.update_line_in_file(file_path, search_phrase, new_value)\n",
     "        \n",
     "        self.show_headline('Please execute yolox_convert.bat in current work directory.')\n",
@@ -368,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "id": "853d8e7e-e1e5-49e1-a57e-f30e0858a0aa",
    "metadata": {
     "tags": []
@@ -377,12 +387,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "81a917d6f6d84ba6a6a741dc322c8093",
+       "model_id": "063ccdd072ac4a51a58a0de109e35fe6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HTML(value=\"<b><font color='lightgreen'><font size=6>Please Choose the setting of data prepare & train</b>\")"
+       "HTML(value=\"<b><font color='lightgreen'><font size=6>Yolox-nano-nu Easy Setting</b>\")"
       ]
      },
      "metadata": {},
@@ -403,7 +413,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae2b1828a1af473aa8563e98f610fda0",
+       "model_id": "f3c62171d8bf48979bf04e7e5dae9d01",
        "version_major": 2,
        "version_minor": 0
       },
@@ -417,7 +427,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "22976a45f08e4490b47956dd3ace1e5b",
+       "model_id": "074cdecb87fc42f4bd5b6ef29052c8ab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -431,7 +441,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de768cd7a359490fa2978f0f56ef140a",
+       "model_id": "802bcb6341954e76a2116ff7db3e9ba1",
        "version_major": 2,
        "version_minor": 0
       },
