update yolox_head for NPU full support. correct eval_yolof with rgb format

--- a/UIRun.ipynb
+++ b/UIRun.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "50c65525-ff24-44ce-933b-324006bc2f6c",
    "metadata": {
     "jupyter": {
@@ -146,7 +146,7 @@
     "        self.A_cm = widgets.Text(value=r'YOLOX_outputs/yolox_n_nu_320', placeholder='Type something', disabled=False)\n",
     "        self.B_cm = widgets.Text(value=r'datasets/coco/train2017', placeholder='Type something', disabled=False)\n",
     "        self.C_cm = widgets.Text(value='yolox_n_nu_320_mytask', placeholder='Type something', disabled=False)\n",
-    "        self.D_cm = widgets.Button(description='Run', layout=Layout(width='30%', height='30px'), button_style='success')\n",
+    "        self.D_cm = widgets.Button(description='Gen Bat file', layout=Layout(width='30%', height='30px'), button_style='success')\n",
     "      \n",
     "        form_convert_items_paths =  [\n",
     "            Box([Label(value = 'Project Dir'),          self.A_cm], layout=form_item_layout),\n",
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "853d8e7e-e1e5-49e1-a57e-f30e0858a0aa",
    "metadata": {
     "tags": []
@@ -387,7 +387,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "063ccdd072ac4a51a58a0de109e35fe6",
+       "model_id": "a13027e890794e178db903c3fd463ba3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -413,7 +413,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3c62171d8bf48979bf04e7e5dae9d01",
+       "model_id": "5348a5a7496e45ae9bbed2c31ad4c725",
        "version_major": 2,
        "version_minor": 0
       },
@@ -427,7 +427,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "074cdecb87fc42f4bd5b6ef29052c8ab",
+       "model_id": "52bcc60f2cb84324967acc6c3a9df86d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -441,7 +441,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "802bcb6341954e76a2116ff7db3e9ba1",
+       "model_id": "2925b80b98284fd5871e26c6a521a973",
        "version_major": 2,
        "version_minor": 0
       },
